--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ p, a {
     background: linear-gradient(90deg, rgba(8, 37, 103, 1) 0%, rgba(109, 80, 167, 1) 50%, rgba(133, 46, 69, 1) 100%);
     text-align: center;
     padding: 3rem 2rem;
+    user-select: none;
+    margin-bottom: 4rem;
 }
 .banner h1 {
     font-size: clamp(2rem, 8vw, 60px);
@@ -54,8 +56,22 @@ main {
     margin: 0 20%;
 }
 section {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 3.5rem;
+}
+.video {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* exakt 16:9 */
+  overflow: hidden;
+}
+
+.video iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  display: block; /* verhindert kleinen Inline-Spacing */
 }
 
 
@@ -65,15 +81,21 @@ section {
     flex-wrap: wrap;
     gap: 2rem;
 }
+.project-container a {
+    line-height: 0;
+}
 .poster {
     width: 160px;
     height: auto;
     object-fit: cover;
     flex-shrink: 0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.poster:hover {
+    transform: scale(1.05);
 }
 .project-description {
-    flex: 1;
     min-width: 200px;
 }
 
