--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p, a {
     text-align: center;
     padding: 3rem 2rem;
     user-select: none;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 .banner h1 {
     font-size: clamp(2rem, 8vw, 60px);
@@ -56,22 +56,23 @@ main {
     margin: 0 20%;
 }
 section {
-    padding-top: 3.5rem;
+    padding-bottom: 3rem;
 }
+
+
 .video {
   position: relative;
   width: 100%;
-  padding-top: 56.25%; /* exakt 16:9 */
+  padding-top: 56.25%;
   overflow: hidden;
 }
-
 .video iframe {
   position: absolute;
   top: 0; left: 0;
   width: 100%;
   height: 100%;
   border: 0;
-  display: block; /* verhindert kleinen Inline-Spacing */
+  display: block;
 }
 
 
@@ -97,7 +98,10 @@ section {
 }
 .project-description {
     min-width: 200px;
+    flex: 1;           /* Wichtig: Beschreibung füllt den restlichen Platz */
+    word-wrap: break-word; /* Optional, für lange Wörter */
 }
+
 
 
 footer {
