--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
     font-size: 30px;
     color: var(--text-muted);
     padding: 0;
+    margin-top: 1rem;
     margin-bottom: 1rem;
 }
 p, a {
@@ -50,13 +51,18 @@ p, a {
     padding: 0;
     padding-top: 10px;
 }
+.banner img {
+    margin-top: 20px;
+    width:60px;
+    filter: invert;
+}
 
 
 main {
     margin: 0 20%;
 }
 section {
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
 }
 
 
@@ -73,6 +79,7 @@ section {
   height: 100%;
   border: 0;
   display: block;
+  border-radius: 20px;
 }
 
 
@@ -81,6 +88,7 @@ section {
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 2rem;
+    margin-bottom: 2rem;
 }
 .project-container a {
     line-height: 0;
@@ -102,6 +110,16 @@ section {
     word-wrap: break-word; /* Optional, für lange Wörter */
 }
 
+
+.imprint p, a {
+    font-size: 18px;
+    color: var(--text-light);
+    line-height: 1.5;
+    text-decoration: none;
+}
+.imprint a {
+    color: var(--text-muted);
+}
 
 
 footer {
