--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 .banner {
     position: relative;
     overflow: hidden;
-    background: linear-gradient(90deg, #2a2a2a 0%, #d1d1d1 50%, #dba49c 100%);
+    background: linear-gradient(90deg, #2a2a2a 0%, #4b3d42 50%, #9d6b6b 100%);
     text-align: center;
     padding: 3rem 2rem;
     user-select: none;
